// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Custom Functions > can use CONTAINS array function 1`] = `
[
  {
    "operation": "begin",
    "rule": undefined,
  },
  {
    "key": "cities",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 1,
    "stepRow": 0,
    "value": [
      "Denver",
      "London",
      "LA",
    ],
  },
  {
    "lhs": "hasLondon",
    "operation": "evalRule",
    "previous": undefined,
    "result": "{"cities":["Denver","London","LA"],"onlyUSA":true,"hasLondon":true}",
    "rule": "hasLondon = CONTAINS("London", cities)",
    "stepCount": 1,
    "stepRow": 0,
    "value": true,
  },
  {
    "currentState": "{"cities":["Denver","London","LA"],"onlyUSA":true,"hasLondon":true}",
    "operation": "ruleString",
    "result": "{"cities":["Denver","London","LA"],"onlyUSA":true,"hasLondon":true}",
    "rule": "hasLondon = CONTAINS("London", cities)",
    "stepCount": 1,
    "stepRow": 0,
  },
  {
    "currentState": "{"cities":["Denver","London","LA"],"onlyUSA":true,"hasLondon":true}",
    "lastValue": "{"cities":["Denver","London","LA"],"onlyUSA":true,"hasLondon":true}",
    "operation": "complete",
    "rule": undefined,
    "stepCount": 1,
    "stepRow": 1,
  },
]
`;

exports[`Custom Functions > can use functional array helpers 1`] = `
[
  {
    "operation": "begin",
    "rule": undefined,
  },
  {
    "key": "cities",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 1,
    "stepRow": 0,
    "value": [
      "Denver",
      "London",
      "LA",
    ],
  },
  {
    "lhs": "availableCities",
    "operation": "evalRule",
    "previous": undefined,
    "result": "{"cities":["Denver","London","LA"],"onlyUSA":true,"availableCities":["Denver","LA"]}",
    "rule": "availableCities = FILTER_VALUES(["London", "Milan"], cities)",
    "stepCount": 1,
    "stepRow": 0,
    "value": [
      "Denver",
      "LA",
    ],
  },
  {
    "currentState": "{"cities":["Denver","London","LA"],"onlyUSA":true,"availableCities":["Denver","LA"]}",
    "operation": "ruleString",
    "result": "{"cities":["Denver","London","LA"],"onlyUSA":true,"availableCities":["Denver","LA"]}",
    "rule": "availableCities = FILTER_VALUES(["London", "Milan"], cities)",
    "stepCount": 1,
    "stepRow": 0,
  },
  {
    "key": "availableCities",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 2,
    "stepRow": 1,
    "value": [
      "Denver",
      "LA",
    ],
  },
  {
    "operation": "expression",
    "result": [
      "Denver",
      "LA",
    ],
    "rule": "availableCities",
    "stepCount": 2,
    "stepRow": 1,
  },
  {
    "currentState": "{"cities":["Denver","London","LA"],"onlyUSA":true,"availableCities":["Denver","LA"]}",
    "operation": "return",
    "result": "["Denver","LA"]",
    "rule": "availableCities",
    "stepCount": 2,
    "stepRow": 1,
  },
  {
    "currentState": "{"cities":["Denver","London","LA"],"onlyUSA":true,"availableCities":["Denver","LA"]}",
    "lastValue": "["Denver","LA"]",
    "operation": "complete",
    "rule": undefined,
    "stepCount": 2,
    "stepRow": 1,
  },
]
`;

exports[`Custom Functions > can use functions as expressions 1`] = `"2020-01-20T00:10:00.000Z"`;

exports[`Edge cases > should not lose input when conditional does match 1`] = `
[
  {
    "operation": "begin",
    "rule": undefined,
  },
  {
    "key": "input",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 1,
    "stepRow": 0,
    "value": 42,
  },
  {
    "operation": "expression",
    "result": true,
    "rule": "input == 42",
    "stepCount": 1,
    "stepRow": 0,
  },
  {
    "currentState": "{"input":42}",
    "operation": "if",
    "result": true,
    "rule": "input == 42",
    "stepCount": 1,
    "stepRow": 0,
  },
  {
    "currentState": "{"input":42}",
    "operation": "if.then",
    "rule": "doSet = 9999",
    "stepCount": 1,
    "stepRow": 0,
  },
  {
    "lhs": "doSet",
    "operation": "evalRule",
    "previous": undefined,
    "result": "{"input":42,"doSet":9999}",
    "rule": "doSet = 9999",
    "stepCount": 2,
    "stepRow": 0,
    "value": 9999,
  },
  {
    "currentState": "{"input":42,"doSet":9999}",
    "operation": "ruleString",
    "result": "{"input":42,"doSet":9999}",
    "rule": "doSet = 9999",
    "stepCount": 2,
    "stepRow": 0,
  },
  {
    "currentState": "{"input":42,"doSet":9999}",
    "lastValue": "{"input":42,"doSet":9999}",
    "operation": "complete",
    "rule": undefined,
    "stepCount": 2,
    "stepRow": 1,
  },
]
`;

exports[`Edge cases > should not lose input when conditional does not match 1`] = `
[
  {
    "operation": "begin",
    "rule": undefined,
  },
  {
    "key": "undefinedKey",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 1,
    "stepRow": 0,
    "value": undefined,
  },
  {
    "operation": "expression",
    "result": false,
    "rule": "undefinedKey == false",
    "stepCount": 1,
    "stepRow": 0,
  },
  {
    "currentState": "{"input":42}",
    "operation": "if",
    "result": false,
    "rule": "undefinedKey == false",
    "stepCount": 1,
    "stepRow": 0,
  },
  {
    "currentState": "{"input":42}",
    "lastValue": "{"input":42}",
    "operation": "complete",
    "rule": undefined,
    "stepCount": 1,
    "stepRow": 1,
  },
]
`;

exports[`Logical > and/or > can process 'and' rules 1`] = `
[
  {
    "operation": "begin",
    "rule": undefined,
  },
  {
    "key": "price",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 1,
    "stepRow": 0,
    "value": 35,
  },
  {
    "operation": "expression",
    "result": true,
    "rule": "price >= 25",
    "stepCount": 1,
    "stepRow": 0,
  },
  {
    "key": "price",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 2,
    "stepRow": 0,
    "value": 35,
  },
  {
    "operation": "expression",
    "result": true,
    "rule": "price <= 50",
    "stepCount": 2,
    "stepRow": 0,
  },
  {
    "currentState": "{"price":35}",
    "operation": "if.and",
    "result": true,
    "rule": [
      "price >= 25",
      "price <= 50",
    ],
    "stepCount": 2,
    "stepRow": 0,
  },
  {
    "currentState": "{"price":35}",
    "operation": "if.then",
    "rule": "discount = 5",
    "stepCount": 2,
    "stepRow": 0,
  },
  {
    "lhs": "discount",
    "operation": "evalRule",
    "previous": undefined,
    "result": "{"price":35,"discount":5}",
    "rule": "discount = 5",
    "stepCount": 3,
    "stepRow": 0,
    "value": 5,
  },
  {
    "currentState": "{"price":35,"discount":5}",
    "operation": "ruleString",
    "result": "{"price":35,"discount":5}",
    "rule": "discount = 5",
    "stepCount": 3,
    "stepRow": 0,
  },
  {
    "key": "price",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 4,
    "stepRow": 1,
    "value": 35,
  },
  {
    "operation": "expression",
    "result": false,
    "rule": "price >= 100",
    "stepCount": 4,
    "stepRow": 1,
  },
  {
    "currentState": "{"price":35,"discount":5}",
    "operation": "if",
    "result": false,
    "rule": "price >= 100",
    "stepCount": 4,
    "stepRow": 1,
  },
  {
    "key": "discount",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 5,
    "stepRow": 2,
    "value": 5,
  },
  {
    "operation": "expression",
    "result": 5,
    "rule": "discount",
    "stepCount": 5,
    "stepRow": 2,
  },
  {
    "currentState": "{"price":35,"discount":5}",
    "operation": "return",
    "result": 5,
    "rule": "discount",
    "stepCount": 5,
    "stepRow": 2,
  },
  {
    "currentState": "{"price":35,"discount":5}",
    "lastValue": 5,
    "operation": "complete",
    "rule": undefined,
    "stepCount": 5,
    "stepRow": 2,
  },
]
`;

exports[`Logical > and/or > can process 'or' rules 1`] = `
[
  {
    "operation": "begin",
    "rule": undefined,
  },
  {
    "key": "price",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 1,
    "stepRow": 0,
    "value": 35,
  },
  {
    "operation": "expression",
    "result": true,
    "rule": "price <= 100",
    "stepCount": 1,
    "stepRow": 0,
  },
  {
    "currentState": "{"price":35,"user":{"isAdmin":true}}",
    "operation": "if",
    "result": true,
    "rule": "price <= 100",
    "stepCount": 1,
    "stepRow": 0,
  },
  {
    "currentState": "{"price":35,"user":{"isAdmin":true}}",
    "operation": "if.then",
    "rule": "discount = 5",
    "stepCount": 1,
    "stepRow": 0,
  },
  {
    "lhs": "discount",
    "operation": "evalRule",
    "previous": undefined,
    "result": "{"price":35,"user":{"isAdmin":true},"discount":5}",
    "rule": "discount = 5",
    "stepCount": 2,
    "stepRow": 0,
    "value": 5,
  },
  {
    "currentState": "{"price":35,"user":{"isAdmin":true},"discount":5}",
    "operation": "ruleString",
    "result": "{"price":35,"user":{"isAdmin":true},"discount":5}",
    "rule": "discount = 5",
    "stepCount": 2,
    "stepRow": 0,
  },
  {
    "key": "price",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 3,
    "stepRow": 1,
    "value": 35,
  },
  {
    "operation": "expression",
    "result": false,
    "rule": "price >= 100",
    "stepCount": 3,
    "stepRow": 1,
  },
  {
    "key": "user.isAdmin",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 4,
    "stepRow": 1,
    "value": true,
  },
  {
    "operation": "expression",
    "result": true,
    "rule": "user.isAdmin == true",
    "stepCount": 4,
    "stepRow": 1,
  },
  {
    "currentState": "{"price":35,"user":{"isAdmin":true},"discount":5}",
    "operation": "if.or",
    "result": true,
    "rule": [
      "price >= 100",
      "user.isAdmin == true",
    ],
    "stepCount": 4,
    "stepRow": 1,
  },
  {
    "currentState": "{"price":35,"user":{"isAdmin":true},"discount":5}",
    "operation": "if.then",
    "rule": "discount = 20",
    "stepCount": 4,
    "stepRow": 1,
  },
  {
    "lhs": "discount",
    "operation": "evalRule",
    "previous": 5,
    "result": "{"price":35,"user":{"isAdmin":true},"discount":20}",
    "rule": "discount = 20",
    "stepCount": 5,
    "stepRow": 1,
    "value": 20,
  },
  {
    "currentState": "{"price":35,"user":{"isAdmin":true},"discount":20}",
    "operation": "ruleString",
    "result": "{"price":35,"user":{"isAdmin":true},"discount":20}",
    "rule": "discount = 20",
    "stepCount": 5,
    "stepRow": 1,
  },
  {
    "key": "discount",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 6,
    "stepRow": 2,
    "value": 20,
  },
  {
    "operation": "expression",
    "result": 20,
    "rule": "discount",
    "stepCount": 6,
    "stepRow": 2,
  },
  {
    "currentState": "{"price":35,"user":{"isAdmin":true},"discount":20}",
    "operation": "return",
    "result": 20,
    "rule": "discount",
    "stepCount": 6,
    "stepRow": 2,
  },
  {
    "currentState": "{"price":35,"user":{"isAdmin":true},"discount":20}",
    "lastValue": 20,
    "operation": "complete",
    "rule": undefined,
    "stepCount": 6,
    "stepRow": 2,
  },
]
`;

exports[`Logical > and/or > can process nested logical rule arrays 1`] = `
[
  {
    "operation": "begin",
    "rule": undefined,
  },
  {
    "key": "price",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 1,
    "stepRow": 0,
    "value": 90,
  },
  {
    "operation": "expression",
    "result": true,
    "rule": "price <= 100",
    "stepCount": 1,
    "stepRow": 0,
  },
  {
    "currentState": "{"price":90,"user":{"isAdmin":true}}",
    "operation": "if",
    "result": true,
    "rule": "price <= 100",
    "stepCount": 1,
    "stepRow": 0,
  },
  {
    "currentState": "{"price":90,"user":{"isAdmin":true}}",
    "operation": "if.then",
    "rule": [
      "discount = 5",
      "user.discountApplied = true",
    ],
    "stepCount": 1,
    "stepRow": 0,
  },
  {
    "lhs": "discount",
    "operation": "evalRule",
    "previous": undefined,
    "result": "{"price":90,"user":{"isAdmin":true},"discount":5}",
    "rule": "discount = 5",
    "stepCount": 2,
    "stepRow": 0,
    "value": 5,
  },
  {
    "lhs": "user.discountApplied",
    "operation": "evalRule",
    "previous": undefined,
    "result": "{"price":90,"user":{"isAdmin":true,"discountApplied":true},"discount":5}",
    "rule": "user.discountApplied = true",
    "stepCount": 3,
    "stepRow": 0,
    "value": true,
  },
  {
    "currentState": "{"price":90,"user":{"isAdmin":true,"discountApplied":true},"discount":5}",
    "operation": "ruleString[]",
    "result": "[{"price":90,"user":{"isAdmin":true,"discountApplied":true},"discount":5},{"price":90,"user":{"isAdmin":true,"discountApplied":true},"discount":5}]",
    "rule": [
      "discount = 5",
      "user.discountApplied = true",
    ],
    "stepCount": 3,
    "stepRow": 0,
  },
  {
    "key": "price",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 4,
    "stepRow": 1,
    "value": 90,
  },
  {
    "operation": "expression",
    "result": true,
    "rule": "price >= 90",
    "stepCount": 4,
    "stepRow": 1,
  },
  {
    "key": "user.discountApplied",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 5,
    "stepRow": 1,
    "value": true,
  },
  {
    "operation": "expression",
    "result": false,
    "rule": "user.discountApplied != true",
    "stepCount": 5,
    "stepRow": 1,
  },
  {
    "currentState": "{"price":90,"user":{"isAdmin":true,"discountApplied":true},"discount":5}",
    "operation": "if.and",
    "result": false,
    "rule": [
      "price >= 90",
      "user.discountApplied != true",
    ],
    "stepCount": 5,
    "stepRow": 1,
  },
  {
    "key": "discount",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 6,
    "stepRow": 2,
    "value": 5,
  },
  {
    "operation": "expression",
    "result": 5,
    "rule": "discount",
    "stepCount": 6,
    "stepRow": 2,
  },
  {
    "currentState": "{"price":90,"user":{"isAdmin":true,"discountApplied":true},"discount":5}",
    "operation": "return",
    "result": 5,
    "rule": "discount",
    "stepCount": 6,
    "stepRow": 2,
  },
  {
    "currentState": "{"price":90,"user":{"isAdmin":true,"discountApplied":true},"discount":5}",
    "lastValue": 5,
    "operation": "complete",
    "rule": undefined,
    "stepCount": 6,
    "stepRow": 2,
  },
]
`;

exports[`Logical > if/then/else > can process 'then' rules 1`] = `
[
  {
    "operation": "begin",
    "rule": undefined,
  },
  {
    "key": "price",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 1,
    "stepRow": 0,
    "value": 100,
  },
  {
    "operation": "expression",
    "result": true,
    "rule": "price >= 25",
    "stepCount": 1,
    "stepRow": 0,
  },
  {
    "currentState": "{"price":100}",
    "operation": "if",
    "result": true,
    "rule": "price >= 25",
    "stepCount": 1,
    "stepRow": 0,
  },
  {
    "currentState": "{"price":100}",
    "operation": "if.then",
    "rule": "discount = 5",
    "stepCount": 1,
    "stepRow": 0,
  },
  {
    "lhs": "discount",
    "operation": "evalRule",
    "previous": undefined,
    "result": "{"price":100,"discount":5}",
    "rule": "discount = 5",
    "stepCount": 2,
    "stepRow": 0,
    "value": 5,
  },
  {
    "currentState": "{"price":100,"discount":5}",
    "operation": "ruleString",
    "result": "{"price":100,"discount":5}",
    "rule": "discount = 5",
    "stepCount": 2,
    "stepRow": 0,
  },
  {
    "key": "price",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 3,
    "stepRow": 1,
    "value": 100,
  },
  {
    "operation": "expression",
    "result": true,
    "rule": "price >= 100",
    "stepCount": 3,
    "stepRow": 1,
  },
  {
    "currentState": "{"price":100,"discount":5}",
    "operation": "if",
    "result": true,
    "rule": "price >= 100",
    "stepCount": 3,
    "stepRow": 1,
  },
  {
    "currentState": "{"price":100,"discount":5}",
    "operation": "if.then",
    "rule": "discount = 20",
    "stepCount": 3,
    "stepRow": 1,
  },
  {
    "lhs": "discount",
    "operation": "evalRule",
    "previous": 5,
    "result": "{"price":100,"discount":20}",
    "rule": "discount = 20",
    "stepCount": 4,
    "stepRow": 1,
    "value": 20,
  },
  {
    "currentState": "{"price":100,"discount":20}",
    "operation": "ruleString",
    "result": "{"price":100,"discount":20}",
    "rule": "discount = 20",
    "stepCount": 4,
    "stepRow": 1,
  },
  {
    "key": "discount",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 5,
    "stepRow": 2,
    "value": 20,
  },
  {
    "operation": "expression",
    "result": 20,
    "rule": "discount",
    "stepCount": 5,
    "stepRow": 2,
  },
  {
    "currentState": "{"price":100,"discount":20}",
    "operation": "return",
    "result": 20,
    "rule": "discount",
    "stepCount": 5,
    "stepRow": 2,
  },
  {
    "currentState": "{"price":100,"discount":20}",
    "lastValue": 20,
    "operation": "complete",
    "rule": undefined,
    "stepCount": 5,
    "stepRow": 2,
  },
]
`;

exports[`Logical > if/then/else > can process omitted 'else' rules 1`] = `
[
  {
    "operation": "begin",
    "rule": undefined,
  },
  {
    "key": "price",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 1,
    "stepRow": 0,
    "value": 10,
  },
  {
    "operation": "expression",
    "result": false,
    "rule": "price >= 100",
    "stepCount": 1,
    "stepRow": 0,
  },
  {
    "currentState": "{"price":10}",
    "operation": "if",
    "result": false,
    "rule": "price >= 100",
    "stepCount": 1,
    "stepRow": 0,
  },
  {
    "key": "discount",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 2,
    "stepRow": 1,
    "value": undefined,
  },
  {
    "operation": "expression",
    "result": undefined,
    "rule": "discount",
    "stepCount": 2,
    "stepRow": 1,
  },
  {
    "currentState": "{"price":10}",
    "operation": "return",
    "result": undefined,
    "rule": "discount",
    "stepCount": 2,
    "stepRow": 1,
  },
  {
    "currentState": "{"price":10}",
    "lastValue": undefined,
    "operation": "complete",
    "rule": undefined,
    "stepCount": 2,
    "stepRow": 1,
  },
]
`;

exports[`Logical > if/then/else > can process series of if/then rules 1`] = `
[
  {
    "operation": "begin",
    "rule": undefined,
  },
  {
    "key": "user.plan",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 1,
    "stepRow": 0,
    "value": "premium",
  },
  {
    "operation": "expression",
    "result": true,
    "rule": "user.plan == "premium"",
    "stepCount": 1,
    "stepRow": 0,
  },
  {
    "currentState": "{"user":{"plan":"premium","employee":true},"config":{"maxDiscount":10},"shoppingCart":{"discount":1,"total":100}}",
    "operation": "if",
    "result": true,
    "rule": "user.plan == "premium"",
    "stepCount": 1,
    "stepRow": 0,
  },
  {
    "currentState": "{"user":{"plan":"premium","employee":true},"config":{"maxDiscount":10},"shoppingCart":{"discount":1,"total":100}}",
    "operation": "if.then",
    "rule": "discount = 15",
    "stepCount": 1,
    "stepRow": 0,
  },
  {
    "lhs": "discount",
    "operation": "evalRule",
    "previous": undefined,
    "result": "{"user":{"plan":"premium","employee":true},"config":{"maxDiscount":10},"shoppingCart":{"discount":1,"total":100},"discount":15}",
    "rule": "discount = 15",
    "stepCount": 2,
    "stepRow": 0,
    "value": 15,
  },
  {
    "currentState": "{"user":{"plan":"premium","employee":true},"config":{"maxDiscount":10},"shoppingCart":{"discount":1,"total":100},"discount":15}",
    "operation": "ruleString",
    "result": "{"user":{"plan":"premium","employee":true},"config":{"maxDiscount":10},"shoppingCart":{"discount":1,"total":100},"discount":15}",
    "rule": "discount = 15",
    "stepCount": 2,
    "stepRow": 0,
  },
  {
    "key": "user.employee",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 3,
    "stepRow": 1,
    "value": true,
  },
  {
    "operation": "expression",
    "result": true,
    "rule": "user.employee == true",
    "stepCount": 3,
    "stepRow": 1,
  },
  {
    "currentState": "{"user":{"plan":"premium","employee":true},"config":{"maxDiscount":10},"shoppingCart":{"discount":1,"total":100},"discount":15}",
    "operation": "if",
    "result": true,
    "rule": "user.employee == true",
    "stepCount": 3,
    "stepRow": 1,
  },
  {
    "currentState": "{"user":{"plan":"premium","employee":true},"config":{"maxDiscount":10},"shoppingCart":{"discount":1,"total":100},"discount":15}",
    "operation": "if.then",
    "rule": "discount = 15",
    "stepCount": 3,
    "stepRow": 1,
  },
  {
    "lhs": "discount",
    "operation": "evalRule",
    "previous": 15,
    "result": "{"user":{"plan":"premium","employee":true},"config":{"maxDiscount":10},"shoppingCart":{"discount":1,"total":100},"discount":15}",
    "rule": "discount = 15",
    "stepCount": 4,
    "stepRow": 1,
    "value": 15,
  },
  {
    "currentState": "{"user":{"plan":"premium","employee":true},"config":{"maxDiscount":10},"shoppingCart":{"discount":1,"total":100},"discount":15}",
    "operation": "ruleString",
    "result": "{"user":{"plan":"premium","employee":true},"config":{"maxDiscount":10},"shoppingCart":{"discount":1,"total":100},"discount":15}",
    "rule": "discount = 15",
    "stepCount": 4,
    "stepRow": 1,
  },
  {
    "key": "discount",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 5,
    "stepRow": 2,
    "value": 15,
  },
  {
    "operation": "expression",
    "result": 15,
    "rule": "discount",
    "stepCount": 5,
    "stepRow": 2,
  },
  {
    "currentState": "{"user":{"plan":"premium","employee":true},"config":{"maxDiscount":10},"shoppingCart":{"discount":1,"total":100},"discount":15}",
    "operation": "return",
    "result": 15,
    "rule": "discount",
    "stepCount": 5,
    "stepRow": 2,
  },
  {
    "currentState": "{"user":{"plan":"premium","employee":true},"config":{"maxDiscount":10},"shoppingCart":{"discount":1,"total":100},"discount":15}",
    "lastValue": 15,
    "operation": "complete",
    "rule": undefined,
    "stepCount": 5,
    "stepRow": 2,
  },
]
`;

exports[`Nested Rule Structures > can process complex rule expressions 1`] = `
[
  {
    "operation": "begin",
    "rule": undefined,
  },
  {
    "key": "price",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 1,
    "stepRow": 0,
    "value": 100,
  },
  {
    "operation": "expression",
    "result": true,
    "rule": "price >= 25",
    "stepCount": 1,
    "stepRow": 0,
  },
  {
    "currentState": "{"price":100}",
    "operation": "if",
    "result": true,
    "rule": "price >= 25",
    "stepCount": 1,
    "stepRow": 0,
  },
  {
    "currentState": "{"price":100}",
    "operation": "if.then",
    "rule": "discount = 5 * 2",
    "stepCount": 1,
    "stepRow": 0,
  },
  {
    "lhs": "discount",
    "operation": "evalRule",
    "previous": undefined,
    "result": "{"price":100,"discount":10}",
    "rule": "discount = 5 * 2",
    "stepCount": 2,
    "stepRow": 0,
    "value": 10,
  },
  {
    "currentState": "{"price":100,"discount":10}",
    "operation": "ruleString",
    "result": "{"price":100,"discount":10}",
    "rule": "discount = 5 * 2",
    "stepCount": 2,
    "stepRow": 0,
  },
  {
    "key": "price",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 3,
    "stepRow": 1,
    "value": 100,
  },
  {
    "operation": "expression",
    "result": true,
    "rule": "price >= 100",
    "stepCount": 3,
    "stepRow": 1,
  },
  {
    "currentState": "{"price":100,"discount":10}",
    "operation": "if",
    "result": true,
    "rule": "price >= 100",
    "stepCount": 3,
    "stepRow": 1,
  },
  {
    "currentState": "{"price":100,"discount":10}",
    "operation": "if.then",
    "rule": "discount = 20 * 4",
    "stepCount": 3,
    "stepRow": 1,
  },
  {
    "lhs": "discount",
    "operation": "evalRule",
    "previous": 10,
    "result": "{"price":100,"discount":80}",
    "rule": "discount = 20 * 4",
    "stepCount": 4,
    "stepRow": 1,
    "value": 80,
  },
  {
    "currentState": "{"price":100,"discount":80}",
    "operation": "ruleString",
    "result": "{"price":100,"discount":80}",
    "rule": "discount = 20 * 4",
    "stepCount": 4,
    "stepRow": 1,
  },
  {
    "key": "discount",
    "operation": "key.lookup",
    "rule": undefined,
    "stepCount": 5,
    "stepRow": 2,
    "value": 80,
  },
  {
    "operation": "expression",
    "result": 80,
    "rule": "discount",
    "stepCount": 5,
    "stepRow": 2,
  },
  {
    "currentState": "{"price":100,"discount":80}",
    "operation": "return",
    "result": 80,
    "rule": "discount",
    "stepCount": 5,
    "stepRow": 2,
  },
  {
    "currentState": "{"price":100,"discount":80}",
    "lastValue": 80,
    "operation": "complete",
    "rule": undefined,
    "stepCount": 5,
    "stepRow": 2,
  },
]
`;
